RESOLVED FIXED215344
Text manipulation crashes when replacing element with img role
https://bugs.webkit.org/show_bug.cgi?id=215344
Summary Text manipulation crashes when replacing element with img role
Sihui Liu
Reported 2020-08-10 16:12:39 PDT
...
Attachments
Patch (7.10 KB, patch)
2020-08-10 21:54 PDT, Sihui Liu
no flags
Patch for landing (6.99 KB, patch)
2020-08-11 10:48 PDT, Sihui Liu
no flags
Patch for landing (6.98 KB, patch)
2020-08-11 10:48 PDT, Sihui Liu
no flags
Sihui Liu
Comment 1 2020-08-10 16:13:01 PDT
Sihui Liu
Comment 2 2020-08-10 21:54:10 PDT
Sihui Liu
Comment 3 2020-08-11 10:48:08 PDT
Created attachment 406392 [details] Patch for landing
Sihui Liu
Comment 4 2020-08-11 10:48:59 PDT
Created attachment 406393 [details] Patch for landing
EWS
Comment 5 2020-08-11 11:14:31 PDT
Committed r265508: <https://trac.webkit.org/changeset/265508> All reviewed patches have been landed. Closing bug and clearing flags on attachment 406393 [details].
Note You need to log in before you can comment on or make changes to this bug.