Text manipulation crashes when replacing element with img role https://bugs.webkit.org/show_bug.cgi?id=215344

Reviewed by Wenson Hsieh.

Source/WebCore:

positionInParentAfterNode and positionInParentBeforeNode do not return Position with Nodes that are ignored by
editing. Element with img role is one of such Nodes. However, TextManipulationController can manipulate content
of children of the ignored Nodes (see the newly added test). Therefore, we'd better not use
positionInParentBeforeNode or positionInParentBeforeNode in TextManipulationController::replace, because
insertion position can be inside a ignored Node.

API Test: TextManipulation.CompleteTextManipulationShouldReplaceContentIgnoredByEditing

* editing/TextManipulationController.cpp:
(WebCore::TextManipulationController::replace):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/TextManipulation.mm:
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/228155@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265508 268f45cc-cd09-0410-ab3c-d52691b4dbfc